[package]
name = "holaplex-indexer-rabbitmq-geyser"
version = "0.8.1"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Solana Geyser plugin adapter for holaplex-indexer RabbitMQ transport"
documentation = "https://docs.rs/holaplex-indexer-rabbitmq-geyser"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.66"
bs58 = "0.4.0"
hashbrown = { version = "0.12.3", features = ["serde"] }
hostname = "0.3.1"
log = "0.4.17"
parking_lot = "0.12.1"
reqwest = "0.11.13"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "1.14.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"

solana-geyser-plugin-interface = "~1.13.5"
solana-logger = "~1.13.5"
solana-metrics = "~1.13.5"
solana-program = "~1.13.5"
solana-transaction-status = "~1.13.5"
spl-token = "3.5.0"

[dependencies.tokio]
version = "1.21.2"
features = [
  "fs",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time",
]

[dependencies.selector]
package = "holaplex-indexer-geyser-selector"
version = "=0.1.1"
path = "../selector"
default-features = false

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
version = "=0.4.1"
path = "../rabbitmq"
default-features = false
features = ["producer", "geyser"]
