[package]
name = "holaplex-indexer-rabbitmq"
version = "0.4.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "RabbitMQ transport components for holaplex-indexer"
documentation = "https://docs.rs/holaplex-indexer-rabbitmq"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
consumer = ["suffix"]
default = ["consumer"]
geyser = ["solana-program", "suffix"]
http-indexer = ["solana-program", "suffix"]
job-runner = ["geyser", "suffix"]
producer = ["suffix"]
search-indexer = ["serde_json", "solana-program", "suffix"]
suffix = []

[dependencies]
futures-util = "0.3.25"
lapin = "2.1.1"
log = "0.4.17"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", optional = true }
# TODO: tighten this bound once more things support 1.10
solana-program = { version = ">=1.9,<1.11", optional = true }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"
